// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when not previewing 1`] = `
<div>
  <div
    class="container"
    title="Camera Preview"
  >
    <div
      class="button"
    >
      <svgr-url />
    </div>
  </div>
</div>
`;

exports[`should render correctly when path previewing 1`] = `<div />`;

exports[`should render correctly when previewing and not support borderless 1`] = `
<div>
  <div
    class="container previewing"
    title="Camera Preview"
  >
    <div
      class="button"
    >
      <svgr-url />
      <div
        class="title"
      >
        PREVIEW
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly when previewing and support borderless 1`] = `
<div>
  <div
    class="container previewing"
    title="Camera Preview"
  >
    <div
      class="button"
    >
      <svgr-url />
      <div
        class="title"
      >
        PREVIEW (OPEN BOTTOM)
      </div>
    </div>
  </div>
</div>
`;
